--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,25 @@
 {
     "name": "chat-backend",
     "version": "1.0.0",
+    "description": "Backend for websocket chat",
     "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/marcvspt/wschat"
+    },
+    "keywords": [
+        "wschat",
+        "websocket",
+        "docker",
+        "nodejs",
+        "marcvspt"
+    ],
+    "author": "Marcvs",
     "dependencies": {
-        "express": "^4.6.0",
-        "socket.io": "^4.1.3"
+        "express": "4.18.2",
+        "socket.io": "4.7.1"
     }
 }
