--- a/backend/app/package.json
+++ b/backend/app/package.json
@@ -2,10 +2,7 @@
     "name": "chat-backend",
     "version": "1.0.0",
     "description": "Backend for websocket chat",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
+    "author": "Marcvs <marcvspt@gmail.com>",
     "repository": {
         "type": "git",
         "url": "https://github.com/marcvspt/wschat"
@@ -17,7 +14,10 @@
         "nodejs",
         "marcvspt"
     ],
-    "author": "Marcvs",
+    "main": "server.js",
+    "scripts": {
+        "test": "node server.js"
+    },
     "dependencies": {
         "express": "4.18.2",
         "socket.io": "4.7.1"
