--- a/backend/app/package.json
+++ b/backend/app/package.json
@@ -12,14 +12,14 @@
         "websocket",
         "docker",
         "nodejs",
+        "cors",
         "marcvspt"
     ],
     "main": "server.js",
     "scripts": {
-        "test": "node server.js"
+        "test": "node --watch server.js"
     },
     "dependencies": {
-        "express": "4.18.2",
-        "socket.io": "4.7.1"
+        "socket.io": "4.7.2"
     }
 }
